<?xml version="1.0"?>
<package format="3">
  <name>isaac_sim_pointcloud_tool</name>
  <version>0.0.1</version>
  <description>Convert Isaac Sim pointcloud to Velodyne format</description>
  <maintainer email="hitlx916@gmail.com">facker</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
